--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "node app.js",
     "server": "nodemon backend/app.js",
     "client": "npm run dev --prefix frontend",
     "wait-and-start": "wait-on http-get://localhost:5000/api/test && npm run client",
