--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "server": "nodemon backend/app.js",
+    "server": "nodemon app.js",
     "client": "npm run dev --prefix frontend",
-    "wait-and-start": "wait-on http-get://localhost:5000/api/test && npm run client",
-    "dev": "concurrently \"npm run server\" \"npm run wait-and-start\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "dependencies": {
     "react": "^19.2.0",
