--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "portfolio-baim-root",
+  "version": "1.0.0",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
-    "client": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwind": "^4.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1",
-    "nodemon": "^3.1.11",
-    "vite": "^7.2.4",
-    "wait-on": "^9.0.3"
+    "nodemon": "^3.1.11"
   }
 }
