--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,9 @@
       "dest": "/app.js"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/frontend/dist/index.html"
     }
