--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node --no-warnings server.js",
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "vercel-build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
