--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-.env
-
-node_modules/
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
+dist/
+frontend/dist/
 build/
 
 .DS_Store
 Thumbs.db
-
 .vite/
+.env
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
